# freeremotedesk

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.github/workflows/: ci.yml  release.yml
agent/: index.html  package.json  tsconfig.json  vite.config.ts
agent/src/: SetupWizard.tsx  main.tsx  protocol.ts  types.ts
agent/src-tauri/: Cargo.toml  tauri.conf.json
agent/src-tauri/capabilities/: default.json
agent/src-tauri/icons/: README.md  icon.icns
agent/src-tauri/src/: config.rs  input.rs  lib.rs  main.rs  pairing.rs  tray.rs
agent/src/webrtc/: host.ts
docs/: DEPLOY.md  DEVELOPMENT.md  PROTOCOL.md  SECURITY.md
pwa/: index.html  package.json  tsconfig.json  vercel.json  vite.config.ts
pwa/public/: manifest.webmanifest  robots.txt  sitemap.xml
pwa/src/: App.tsx  config.ts  main.tsx  savedHosts.ts  styles.css  vite-env.d.ts
pwa/src/components/: ConnectView.tsx  SavePrompt.tsx  SavedHostsList.tsx  SessionToolbar.tsx  SessionView.tsx  SetupScreen.tsx
pwa/src/landing/: Landing.tsx
pwa/src/webrtc/: client.ts  input.ts  protocol.ts
scripts/: setup.ps1  setup.sh
signaling/: package.json  tsconfig.json  wrangler.toml
signaling/scripts/: smoke.mjs
signaling/src/: index.ts
